bg image, removes the 95%php, what's 95% php anyway

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
 							</li>
 
 						</ul>
+						<br/>
 						<a class="btn btn-bg-yellow" href="documents/CV Joris Placette.pdf">Télécharger mon CV (PDF)</a>
 						<!--						<a class="btn btn-border-purple" href="#">See english version </a> -->
 
@@ -131,90 +132,26 @@
 					</div>
 				</div><!-- col-sm-4 -->
 				<div class="col-sm-8">
-					<p class="margin-b-50">Je suis un passionné de <strong>réalité mixte et virtuelle</strong>, d'<strong>impression 3D</strong> et des nouveaux usages de la blockchain et d'internet en général.
+					<p class="margin-b-50">Je suis un passionné de <strong>réalité virtuelle, d'impression 3D, d'UX design</strong> et leurs effets sur notre quotidien.
 						J'adore convaicre, et encore plus être convaincu.
 						Sur mon temps libre je code, je crée avec Unity3D,
 						j'écris un <a href="https://apprendre-l-impression-3d.fr/"><i class="ion-android-globe"></i> blog sur l'impression 3D</a> et
-						je pars en randonnée en chartreuse pour me couper un temps d'internet et ses occupants. <br/>
+						Je garde aussi toujours un oeil sur les nouveaux usages de la blockchain, d'internet et les nouvelles technologies en général.
+						<br/>
+						J'aime partir randonner et pêcher en montagne pour me couper un temps de tout ce que je viens de citer.
+						<br/>
 						J'économise ce que je gagne pour embarquer dans le premier vol commercial du starship.
 					</p>
 
-					<div class="row">
+					<!-- <p>Je suis familier avec ces concepts et leurs technologies :</p>
+					<ul>
+						<li>UX design</li>
+						<li>Programmation</li>
+						<li>Moteurs de jeu</li>
+						<li>MR, VR & AR</li>
+						<li>Impression 3D</li>
+					</ul> -->
 
-						<div class="col-sm-6 col-md-6 col-lg-3">
-							<div class="radial-prog-area margin-b-30">
-								<div class="radial-progress" data-prog-percent=".95">
-									<div></div>
-									<h6 class="progress-title">PYTHON</h6>
-								</div>
-							</div><!-- radial-prog-area-->
-						</div><!-- col-sm-6-->
-
-						<div class="col-sm-6 col-md-6 col-lg-3">
-							<div class="radial-prog-area margin-b-50">
-								<div class="radial-progress" data-prog-percent=".75">
-									<div></div>
-									<h6 class="progress-title">C</h6>
-								</div>
-							</div><!-- radial-prog-area-->
-						</div><!-- col-sm-6-->
-
-						<div class="col-sm-6 col-md-6 col-lg-3">
-							<div class="radial-prog-area margin-b-50">
-								<div class="radial-progress" data-prog-percent=".75">
-									<div></div>
-									<h6 class="progress-title">GIT</h6>
-								</div>
-							</div><!-- radial-prog-area-->
-						</div><!-- col-sm-6-->
-
-						<div class="col-sm-6 col-md-6 col-lg-3">
-							<div class="radial-prog-area margin-b-30">
-								<div class="radial-progress" data-prog-percent=".5">
-									<div></div>
-									<h6 class="progress-title">WEB, HTML, CSS</h6>
-								</div>
-							</div><!-- radial-prog-area-->
-						</div><!-- col-sm-6-->
-
-						<div class="col-sm-6 col-md-6 col-lg-3">
-							<div class="radial-prog-area margin-b-50">
-								<div class="radial-progress" data-prog-percent=".7">
-									<div></div>
-									<h6 class="progress-title">LINUX & Bash</h6>
-								</div>
-							</div><!-- radial-prog-area-->
-						</div><!-- col-sm-6-->
-
-						<div class="col-sm-6 col-md-6 col-lg-3">
-							<div class="radial-prog-area margin-b-30">
-								<div class="radial-progress" data-prog-percent=".65">
-									<div></div>
-									<h6 class="progress-title">UNITY 3D</h6>
-								</div>
-							</div><!-- radial-prog-area-->
-						</div><!-- col-sm-6-->
-
-						<div class="col-sm-6 col-md-6 col-lg-3">
-							<div class="radial-prog-area margin-b-30">
-								<div class="radial-progress" data-prog-percent=".6">
-									<div></div>
-									<h6 class="progress-title">SOLIDWORKS</h6>
-								</div>
-							</div><!-- radial-prog-area-->
-						</div><!-- col-sm-6-->
-
-						<div class="col-sm-6 col-md-6 col-lg-3">
-							<div class="radial-prog-area margin-b-50">
-								<div class="radial-progress" data-prog-percent=".35">
-									<div></div>
-									<h6 class="progress-title">GODOT</h6>
-								</div>
-							</div><!-- radial-prog-area-->
-						</div><!-- col-sm-6-->
-
-
-					</div>row
 				</div><!-- col-sm-8 -->
 			</div><!-- row -->
 		</div><!-- container -->
@@ -228,15 +165,16 @@
 					<div class="counter margin-b-30">
 						<h1 class="title"><b><span class="counter-value" data-duration="2000"
 									data-count="6">6</span></b></h1>
-						<h5 class="desc"><b>Années d'expérience en programmation</b></h5>
+						<h5 class="desc"><b>années de prototypage et programmation</b></h5>
 					</div><!-- counter -->
 				</div><!-- col-md-3-->
 
 				<div class="col-sm-6 col-md-6 col-lg-3">
 					<div class="counter margin-b-30">
 						<h1 class="title"><b><span class="counter-value" data-duration="1000"
-									data-count="9">9</span></b></h1>
-						<h5 class="desc"><b>Projets terminés</b></h5>
+									data-count="3">3</span></b></h1>
+						<h5 class="desc"><b>Projets commerciaux bouclés</b></h5>
+						<!-- 3dgrenoble, 4dv, blog-->
 					</div><!-- margin-b-30 -->
 				</div><!-- col-md-3-->
 
@@ -313,13 +251,10 @@
 						<p class="font-semi-white margin-tb-30">
 							Work in prorgess...
 							<br />
-							Plus d'informations sur le site officiel: <strong><a href="https://www.4dviews.com/"><i
+							Plus d'informations sur <strong><a href="https://www.4dviews.com/"><i
 										class="ion-android-globe"></i> www.4dviews.com</a></strong>
 							et sur <a href="https://twitter.com/4dviews"><strong class="ion-social-twitter"> Twitter
 								</strong></a>
-							<br />
-							<br />
-
 						</p>
 
 					</div><!-- experience -->
@@ -329,21 +264,14 @@
 						<h5 class="font-yellow"><b>UNIVERSITÉ GRENOBLE ALPES</b></h5>
 						<h6 class="margin-t-10">SEPTEMBRE 2018 - JUILLET 2019</h6>
 						<p class="font-semi-white margin-tb-30">
-							J'ai réalisé de l'assistance informatique de premier niveau, j'installais très souvent du
-							matériel audiovisuel à l'avance ou en urgence.
+							J'ai réalisé de l'assistance informatique de premier niveau, à l'avance ou en urgence.
 							J'ai aussi <strong>animé des séances de TD pour des classes d' étudiants en 1ere
 								année</strong> post-baccalauréat.
 						</p>
 						<ul class="list margin-b-30">
-							<li>Résoudre en urgence des problèmes techniques dans les amphithéâtres</li>
-							<li>Configuration et maintenance du matériel et des logiciels, sur site et souvent en ligne
-							</li>
-							<li>Occasionnellement : Animer des séances de travaux dirigés en informatique pour les
-								étudiants en
-								1ere année au <a class="font-weight-bold" href="https://dlst.univ-grenoble-alpes.fr/"><i
-										class="ion-android-globe" /></i> Département licence sciences et
-									technologies</a></li>
-
+							<li>Résolution de problèmes techniques de 1er niveau</li>
+							<li>Configuration et maintenance du matériel et logiciel, sur site et en ligne</li>
+							<li>Animer des séances de travaux dirigés en informatique pour les étudiants en 1ere année au <a class="font-weight-bold" href="https://dlst.univ-grenoble-alpes.fr/"><i class="ion-android-globe" /></i> Département licence sciences et technologies</a></li>
 						</ul>
 					</div><!-- experience -->
 
@@ -351,19 +279,23 @@
 						<h4><b>VENTE & FORMATION IMPRESSION 3D</b></h4>
 						<h5 class="font-yellow"><b>FREE-LANCE - 3DGRENOBLE</b></h5>
 						<h6 class="margin-t-10">JUILLET 2018 - JUIN 2019</h6>
+						
+						<p class="font-semi-white margin-tb-30">J'ai dirigé une micro-entreprise de vente de matériel et formation d'impression 3D.</p>
+
+						<ul class="list margin-b-30">
+							<li>Formation de professionnels et particuliers</li>
+							<li>Suivi de clients, facturation, SAV</li>
+							<li>Référencement en ligne / Search engine optimization</li>
+							<!-- <li>Analyse de trafic</li> -->
+							<li>Campagnes promotionnelles & publicité en ligne</li>
+						</ul>
+
 						<p class="font-semi-white margin-tb-30">
-							J'ai aussi un blog sur ce sujet :
+							J'ai également un blog sur au sujet de l'impression 3D :
 							<br />
 							<strong> <a href="https://apprendre-l-impression-3d.fr"><i class="ion-android-globe" /></i>
 									Apprendre-l-impression-3d.fr</a></strong>
-
-						<ul class="list margin-b-30">
-							<li>Vente en ligne</li>
-							<li>Référencement en ligne / Search engine optimization</li>
-							<li>Analyse de trafic</li>
-							<li>Gestion de clients, facturation, SAV</li>
-							<li>Campagnes promotionnelles & publicité en ligne (AdSense)</li>
-						</ul>
+						</p>
 					</div><!-- experience -->
 
 					<div class="experience margin-b-50">
@@ -372,17 +304,14 @@
 						<h6 class="margin-t-10">JUILLET-AOUT 2018</h6>
 						<p class="font-semi-white margin-tb-30">
 
-							J'ai réalisé un travail d’étude sur le nanosatellite ATISE dont le lancement est prévu pour
+							J'ai réalisé un travail d’étude sur le nanosatellite ATISE dont le lancement est prévu en
 							2021.
-
-							C'était mon experience professionnelle la plus éprouvante mais très formatrice également.
-
+							<!-- Du fait de la courte durée de mon stage, j'ai plus adopté une position d'observateur que d'acteur. -->
 
 						<ul class="list margin-b-30">
 							<li>Étude préliminaire des cas de panne de la charge utile d'ATISE</li>
 							<li>Complétion du document de spécification du logiciel de vol</li>
-							<li>Rédaction d'un document de synthèse des spécifications techniques de l'électronique
-								embarquée</li>
+							<li>Rédaction d'un document de synthèse des spécifications techniques de l'électronique embarquée</li>
 						</ul>
 
 						<a
@@ -449,16 +378,13 @@
 					</a>
 
 					<p>
-						<strong>Je porte ce projet au sein de mon université depuis décembre 2018, j'ai finalement
-							obtenu un budget de 5000€ et un local dédié dans la bibliothèque universitaire
-							Fourier!</strong>
-						Ce projet consiste à rendre accèssible du materiel de réalité virtuelle de pointe (Oculus Rift S
-						et Valve Index) gratuitement (!) aux étudiants et enseignants du campus.
+						<strong>J'ai porté ce projet au sein de l'université Grenoble Alpes en 2018, le projet a finalement
+							obtenu un budget de 5000€ et un local dédié dans une bibliothèque universitaire!</strong>
+						Ce projet consiste à rendre accèssible du materiel de réalité virtuelle de pointe aux membres de l'université Grenoble Alpes.
 						Une telle salle permet aux étudiants de prendre conscience du potentiel de la réalité virtuelle
-						par la pratique
+						par la pratique et d'en appliquer les possibilités à leurs domaines d'études.
 						Pour ma part, je partage l'une de mes passions et veux faire des étudiants grenoblois des futurs
 						acteurs de l'innovation en réalité virtuelle.
-						Amis grenoblois, profitez-en !
 					</p>
 				</div>
 
@@ -482,7 +408,6 @@
 				</div>
 
 			</article>
-
 
 			<article class="p-item web nosoft" style="position: absolute; left: 387px">
 				<h3>Concours Innocup : FreeDwarfs</h3>
@@ -537,7 +462,7 @@
 					<a href="http://www.phoenixmobility.co/">
 						<i class="ion-android-globe" /></i> Ouvrir le site
 					</a>
-					<p> J'ai rejoint temporairement l'équipe de Phoenix Mobility lors du Startup Weekend de Grenoble en
+					<p> J'ai rejoint pour un weekend l'équipe de Phoenix Mobility lors du Startup Weekend de Grenoble en
 						2018.
 						<br />
 						Le premier prototype est déja terminé.
