--- a/en.html
+++ b/en.html
@@ -478,9 +478,9 @@
 			
 			<article class="p-item web nosoft" style="position: absolute; left: 387px">
 				<h3>FreeDwarfs</h3>
-				<img src="images/jorisFreedwarfs.png" 
+				<img src="images/jorisFreedwarfs.jpg" 
 					  style="opacity: 1;" class="large"><div class="fluidbox__ghost" style="width: 100px; height: 184.55px; top: 0px; left: 0px;"></div>
-					  <img src="images/equipeFreedwarfs2.png" 
+					  <img src="images/equipeFreedwarfs2.jpg" 
 					  style="opacity: 1;" class="large"><div class="fluidbox__ghost" style="width: 100px; height: 184.55px; top: 0px; left: 0px;"></div>
 					  
 				
