--- a/index.html
+++ b/index.html
@@ -411,9 +411,9 @@
 
 			<article class="p-item web nosoft" style="position: absolute; left: 387px">
 				<h3>Concours Innocup : FreeDwarfs</h3>
-				<img src="images/jorisFreedwarfs.png" style="opacity: 1;" class="large">
+				<img src="images/jorisFreedwarfs.jpg" style="opacity: 1;" class="large">
 				<div class="fluidbox__ghost" style="width: 100px; height: 184.55px; top: 0px; left: 0px;"></div>
-				<img src="images/equipeFreedwarfs2.png" style="opacity: 1;" class="large">
+				<img src="images/equipeFreedwarfs2.jpg" style="opacity: 1;" class="large">
 				<div class="fluidbox__ghost" style="width: 100px; height: 184.55px; top: 0px; left: 0px;"></div>
 
 
@@ -699,8 +699,7 @@
 
 
 	<section>
-		<a class="btn btn-bg-yellow" href="documents/Portfolio projets de Joris Placette.pdf">Télécharger mon Portfolio
-			hors ligne (PDF)</a>
+		<a class="btn btn-bg-yellow" href="documents/Portfolio projets de Joris Placette.pdf">Télécharger mon Portfolio (PDF)</a>
 	</section>
 
 
