--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Mon Dec 19 2022 22:11:56 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Dec 19 2022 22:21:02 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63a07f1e88734fbcd0492c87" data-wf-site="63a07f1e88734f7606492c86">
 <head>
   <meta charset="utf-8">
@@ -22,7 +22,7 @@
     <div data-w-id="52f27e19-be23-645b-d6c3-54f2aae3ecd8" style="opacity:0" class="text-block">Let&#x27;s connect, I&#x27;m just a click away.</div>
   </div>
   <div class="cardsection section wf-section">
-    <div data-w-id="65289403-a8e7-47d0-40e7-d8197e34a357" style="opacity:0" class="div-block"><img src="images/3rd.png" loading="lazy" data-w-id="32db05a2-fc26-a0db-78bd-058e89f16382" sizes="(max-width: 767px) 92vw, 700px" id="bg" srcset="images/3rd.png 500w, images/3rd.png 800w, images/3rd.png 1080w, images/3rd.png 1512w" alt="" class="card"><img src="images/2nd.png" loading="lazy" data-w-id="4a8a60a0-fd0e-91cb-a19f-d18cb9d71239" sizes="(max-width: 767px) 92vw, 700px" srcset="images/2nd.png 500w, images/2nd.png 800w, images/2nd.png 1080w, images/2nd.png 1512w" alt="" class="card"><img src="images/card-thumbnail.svg" loading="lazy" data-w-id="8c2c1a2e-027d-8641-bad2-b5a6e6dd7c37" alt="" class="card"><img src="images/constellation.png" loading="lazy" data-w-id="74124325-110f-fc47-3cdf-87455ef0c82d" sizes="(max-width: 767px) 92vw, 700px" srcset="images/constellation.png 500w, images/constellation.png 800w, images/constellation.png 1080w, images/constellation.png 1512w" alt="" class="image-2"></div>
+    <div data-w-id="65289403-a8e7-47d0-40e7-d8197e34a357" style="opacity:0" class="div-block"><img src="images/3rd-compressed.jpg" loading="lazy" data-w-id="32db05a2-fc26-a0db-78bd-058e89f16382" sizes="(max-width: 767px) 92vw, 700px" id="bg" srcset="images/3rd-compressed.jpg 500w, images/3rd-compressed.jpg 800w, images/3rd-compressed.jpg 1080w" alt="" class="card"><img src="images/2nd.svg" loading="lazy" data-w-id="4a8a60a0-fd0e-91cb-a19f-d18cb9d71239" alt="" class="card"><img src="images/card-thumbnail.svg" loading="lazy" data-w-id="8c2c1a2e-027d-8641-bad2-b5a6e6dd7c37" alt="" class="card"><img src="images/constellation.png" loading="lazy" data-w-id="74124325-110f-fc47-3cdf-87455ef0c82d" sizes="(max-width: 767px) 92vw, 700px" srcset="images/constellation.png 500w, images/constellation.png 800w, images/constellation.png 1080w, images/constellation.png 1512w" alt="" class="image-2"></div>
   </div>
   <div class="ctasection section wf-section">
     <a data-w-id="5eaed98b-9396-2e79-e729-3cb871f32070" style="opacity:0" href="https://www.linkedin.com/in/joris-placette-47aa80165/" target="_blank" class="button w-button">LinkedIn</a>
