read.cv redirection

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-🔧 Site under maintainance, sorry for the unconvenience.
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="7; url='https://read.cv/jpl'" />
+  </head>
+  <body>
+    <p>You will be redirected to my portfolio soon!</p>
+  </body>
+</html>
