--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="7; url='https://read.cv/jpl'" />
+    <meta http-equiv="refresh" content="0; url='https://read.cv/jpl'" />
   </head>
   <body>
-    <p>You will be redirected to my portfolio soon!</p>
+    <p>Hi 👋, You are getting redirected to my portfolio...</p>
   </body>
 </html>
