--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
                         <h3 class="text-xl font-semibold mb-4">Professional Experience</h3>
                         <div class="mb-8">
-                            <p><strong>2024 - 2025</strong><br>
+                            <p><strong>2024 – 2025</strong><br>
                             <strong>SWE & Volumetric capture Director</strong><br>
                             Soapbox LLC, Atlanta, USA<br>
                             Full time employee, O-1B visa<br>
