--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
                         <div class="border-t border-gray-200 my-6"></div>
 
-                        <h3 class="text-xl font-semibold mb-4">Key Projects</h3>
+                        <h3 class="text-xl font-semibold mb-4">Notable Projects</h3>
                         <div class="mb-8">
                             <p><strong>2024 – Geom Services</strong><br>
                             SaaS platform for locating and characterizing French properties entering the market</p>
