--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
                         <h3 class="text-xl font-semibold mb-4">Additional Projects</h3>
                         <div class="mb-8">
-                            <p><strong>2023 – English-French Translations</strong><br>
+                            <p><strong>English-French Translations</strong><br>
                             Recent project: Portal Stories: Mel (<a href="https://web.archive.org/web/20250323132630mp_/https://store.steampowered.com/app/317400/Portal_Stories_Mel/?l=french" class="text-blue-500 hover:underline">Steam game</a>)</p>
 
                             <p class="mt-4"><strong>2018 – Cinema Radio Columnist</strong><br>
