--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                             <strong>SWE & Volumetric capture Director</strong><br>
                             Soapbox LLC, Atlanta, USA<br>
                             Full time employee, O-1B visa<br>
-                            - Volumetric content capture and production : In-studio performance to final 3D art & integration with 4DViews' Holosys Volumetric capture studio<br>
+                            - Volumetric content capture and production : Focused on scaling operations and increasing capabilities and visual fidelity. In-studio performance to final 3D art & integration with 4DViews' Holosys Volumetric capture studio<br>
                             - Software engineering : Unity & C# , AWS Serverless Application Model, Snap Lens studio, internal tooling.</p>
 
                             <p class="mt-4"><strong>2023 – 2024</strong><br>
